--- a/COMP213-webDesign/COMP213/Index For All Assignments/Assignment 3/assignment3Page.html
+++ b/COMP213-webDesign/COMP213/Index For All Assignments/Assignment 3/assignment3Page.html
@@ -49,6 +49,14 @@
                     <td>Black</td>
                     <td>$249.99</td>
                 </tr>
+                <tr>
+                    <td>White</td>
+                    <td>$100.00</td>
+                </tr>
+                <tr>
+                    <td>Space - Gray</td>
+                    <td>$1000000.00</td>
+                </tr>
             </table>
         </div>
 
@@ -70,8 +78,7 @@
     </div>
     
     <div class = footer>
-        <p>&c Muhammad Sabeeh</p>
-        <p>2021/02/25 - 301184564</p>
+        <p>&c Muhammad Sabeeh - 2021/02/25 - 301184564</p>
     </div>
 
 
